Enhance/eng readme (#91)
* enhance/convert-eng-into-kor (#83)

* ..

* ..

* ..

* ..

* ...

* ..

* ...

* ..

* ..

* ..

* ...

* ...

* ..

Co-authored-by: Seunghyun Lee <shlee21@postech.ac.kr>

* enhance/update-readme (#84)

* ..

* ..

* hotfix/type (#85)

.

* docs: add LunaJang as a contributor for code (#87)

* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

* docs: add seungjaeryanlee as a contributor for code (#88)

* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

* Update mann result (#86)

* Update hp of mann

* .

* .

* Update LICENSE.md (#90)

* Create LICENSE.md

* .

* update codes up-to-date

* eng readme

* Update readme

* .

Co-authored-by: Dongmin Lee <kid33629@gmail.com>
Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -24,6 +24,24 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "LunaJang",
+      "name": "Luna Jang",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25239851?v=4",
+      "profile": "https://github.com/LunaJang",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "seungjaeryanlee",
+      "name": "Seungjae Ryan Lee",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6107926?v=4",
+      "profile": "https://www.endtoend.ai",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
