--- a/src/meta_rl/maml/configs/vel_target_config.yaml
+++ b/src/meta_rl/maml/configs/vel_target_config.yaml
@@ -1,4 +1,4 @@
-# Velocity target reward configs
+# RL^2 속도 목표 보상 환경 설정
 
 # General setup
 # -------------
@@ -33,15 +33,15 @@ maml_params:
     num_stop_conditions: 3
     # Goal value used to early stopping condition
     stop_goal: -100
-
-# TRPO setup
-# ---------
     # Maximum iters for backtracking line search
     backtrack_iters: 15
     # Exponentially decreasing ratio for line searching step
     backtrack_coeff: 0.8
     # KL-divergence limit
     max_kl: 0.01
+
+# PG setup
+# ----------
 pg_params:
     # Learning rate of value_fuction as a baseline fitting
     vf_learning_rate: 0.1
