--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 autopep8==1.5.0
 GPUtil==1.4.0
-gym>=0.24.1
+gym==0.24.1
 imageio>=2.1.2
 jupyter==1.0.0
 jupyter-contrib-nbextensions==0.5.1
 jupyter-nbextensions-configurator==0.4.1
 matplotlib>=3.5.2
-mujoco>=2.2.0
+mujoco==2.2.0
 torchmeta>=1.8.0
 tqdm>=4.62.3
