--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,25 +9,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        id: setup-python
         with:
-          python-version: 3.8.8
+          python-version: '3.8.8'
       - name: Initial setup
         shell: bash -l {0}
-        run: make init-dev
-      - uses: pre-commit/action@v2.0.0
+        run: make init
+      - uses: pre-commit/action@v2.0.3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
-  check-build-package:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8.8
-      - name: Build python package
-        run: |
-          pip install wheel
-          python setup.py sdist bdist_wheel --universal
