--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,123 @@
-autopep8==1.5.0
-GPUtil==1.4.0
-gym==0.24.1
-imageio>=2.1.2
-jupyter==1.0.0
+absl-py==1.2.0; python_version >= "3.7"
+appnope==0.1.3; platform_system == "Darwin" and python_version >= "3.8" and python_full_version >= "3.7.0" and sys_platform == "darwin"
+argon2-cffi-bindings==21.2.0; python_version >= "3.7"
+argon2-cffi==21.3.0; python_version >= "3.7"
+astroid==2.6.6; python_version >= "3.6" and python_version < "4.0"
+asttokens==2.0.8; python_version >= "3.8" and python_full_version >= "3.7.0"
+atomicwrites==1.4.1; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
+attrs==22.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+autopep8==1.5
+backcall==0.2.0; python_version >= "3.8" and python_full_version >= "3.7.0"
+beautifulsoup4==4.11.1; python_full_version >= "3.6.0" and python_version >= "3.7"
+black==22.3.0; python_full_version >= "3.6.2"
+bleach==5.0.1; python_version >= "3.7"
+cffi==1.15.1; implementation_name == "pypy" and python_version >= "3.7"
+click==8.1.3; python_version >= "3.7" and python_full_version >= "3.6.2"
+cloudpickle==2.2.0; python_version >= "3.6"
+colorama==0.4.5; python_full_version >= "3.7.0" and platform_system == "Windows" and python_version >= "3.8" and python_version < "4.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and python_full_version >= "3.5.0")
+cycler==0.11.0; python_version >= "3.7"
+debugpy==1.6.3; python_version >= "3.7"
+decorator==5.1.1; python_version >= "3.8" and python_full_version >= "3.7.0"
+defusedxml==0.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+entrypoints==0.4; python_version >= "3.7"
+executing==1.0.0; python_version >= "3.8" and python_full_version >= "3.7.0"
+fastjsonschema==2.16.1; python_full_version >= "3.7.0" and python_version >= "3.7"
+flake8==3.8.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+fonttools==4.37.1; python_version >= "3.7"
+glfw==2.5.5; python_version >= "3.7"
+gputil==1.4.0
+gym-notices==0.0.8; python_version >= "3.6"
+gym==0.24.1; python_version >= "3.6"
+imageio==2.21.3; python_version >= "3.7"
+importlib-metadata==4.12.0; python_version < "3.10" and python_version >= "3.7"
+importlib-resources==5.9.0; python_full_version >= "3.7.0" and python_version >= "3.7" and python_version < "3.9"
+iniconfig==1.1.1; python_version >= "3.6"
+ipykernel==6.15.3; python_version >= "3.7"
+ipython-genutils==0.2.0; python_version >= "3.7"
+ipython==8.5.0; python_version >= "3.8" and python_full_version >= "3.7.0"
+ipywidgets==8.0.2; python_version >= "3.7"
+isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
+jedi==0.18.1; python_version >= "3.8" and python_full_version >= "3.7.0"
+jinja2==3.1.2; python_version >= "3.7"
+jsonschema==4.16.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+jupyter-client==7.3.5; python_full_version >= "3.7.0" and python_version >= "3.7"
+jupyter-console==6.4.4; python_version >= "3.7"
+jupyter-contrib-core==0.4.0
 jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.11.1; python_full_version >= "3.7.0" and python_version >= "3.7"
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
 jupyter-nbextensions-configurator==0.4.1
-matplotlib>=3.5.2
-mujoco==2.2.0
-torchmeta>=1.8.0
-tqdm>=4.62.3
+jupyter==1.0.0
+jupyterlab-pygments==0.2.2; python_version >= "3.7"
+jupyterlab-widgets==3.0.3; python_version >= "3.7"
+kiwisolver==1.4.4; python_version >= "3.7"
+lazy-object-proxy==1.7.1; python_version >= "3.6" and python_version < "4.0"
+lxml==4.9.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+markupsafe==2.1.1; python_version >= "3.7"
+matplotlib-inline==0.1.6; python_version >= "3.8" and python_full_version >= "3.7.0"
+matplotlib==3.5.3; python_version >= "3.7"
+mccabe==0.6.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.4.0"
+mistune==2.0.4; python_version >= "3.7"
+mujoco==2.2.0; python_version >= "3.7"
+mypy-extensions==0.4.3; python_full_version >= "3.6.2"
+nbclient==0.6.8; python_full_version >= "3.7.0" and python_version >= "3.7"
+nbconvert==7.0.0; python_version >= "3.7"
+nbformat==5.5.0; python_full_version >= "3.7.0" and python_version >= "3.7"
+nbqa==1.3.1; python_full_version >= "3.7.0"
+nest-asyncio==1.5.5; python_full_version >= "3.7.0" and python_version >= "3.7"
+notebook==6.4.12; python_version >= "3.7"
+numpy==1.23.3; python_version >= "3.8"
+packaging==21.3; python_version >= "3.7"
+pandocfilters==1.5.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+parso==0.8.3; python_version >= "3.8" and python_full_version >= "3.7.0"
+pathspec==0.10.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+pexpect==4.8.0; python_version >= "3.8" and python_full_version >= "3.7.0" and sys_platform != "win32"
+pickleshare==0.7.5; python_version >= "3.8" and python_full_version >= "3.7.0"
+pillow==9.2.0; python_version >= "3.7"
+pkgutil-resolve-name==1.3.10; python_full_version >= "3.7.0" and python_version >= "3.7" and python_version < "3.9"
+platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2"
+pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+prometheus-client==0.14.1; python_version >= "3.7"
+prompt-toolkit==3.0.31; python_full_version >= "3.7.0" and python_version >= "3.8"
+psutil==5.9.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+ptyprocess==0.7.0; os_name != "nt" and python_version >= "3.8" and python_full_version >= "3.7.0" and sys_platform != "win32"
+pure-eval==0.2.2; python_version >= "3.8" and python_full_version >= "3.7.0"
+py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or python_full_version >= "3.5.0" and python_version >= "3.7" and implementation_name == "pypy"
+pycodestyle==2.6.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+pycparser==2.21; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.4.0"
+pyflakes==2.2.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
+pygments==2.13.0; python_version >= "3.8" and python_full_version >= "3.7.0"
+pylint==2.7.3; python_version >= "3.6" and python_version < "4.0"
+pyopengl==3.1.6; python_version >= "3.7"
+pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
+pyrsistent==0.18.1; python_full_version >= "3.7.0" and python_version >= "3.7"
+pytest-flake8==1.0.6
+pytest-pylint==0.18.0; python_version >= "3.5"
+pytest==6.2.2; python_version >= "3.6"
+python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+pywin32==304; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7"
+pywinpty==2.0.7; os_name == "nt" and python_version >= "3.7"
+pyyaml==6.0; python_version >= "3.6"
+pyzmq==23.2.1; python_version >= "3.7"
+qtconsole==5.3.2; python_version >= "3.7"
+qtpy==2.2.0; python_version >= "3.7"
+send2trash==1.8.0; python_version >= "3.7"
+setuptools-scm==6.4.2; python_version >= "3.7"
+six==1.16.0; python_full_version >= "3.7.0" and python_version >= "3.8"
+soupsieve==2.3.2.post1; python_full_version >= "3.6.0" and python_version >= "3.7"
+stack-data==0.5.0; python_version >= "3.8" and python_full_version >= "3.7.0"
+terminado==0.15.0; python_version >= "3.7"
+tinycss2==1.1.1; python_version >= "3.7"
+tokenize-rt==4.2.1; python_full_version >= "3.7.0"
+toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.3.0"
+tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.7.0" and python_version >= "3.7"
+tornado==6.2; python_version >= "3.7"
+tqdm==4.64.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+traitlets==5.4.0; python_version >= "3.8" and python_full_version >= "3.7.0"
+typing-extensions==4.3.0; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.7"
+wcwidth==0.2.5; python_full_version >= "3.7.0" and python_version >= "3.8"
+webencodings==0.5.1; python_version >= "3.7"
+widgetsnbextension==4.0.3; python_version >= "3.7"
+wrapt==1.12.1; python_version >= "3.6" and python_version < "4.0"
+zipp==3.8.1; python_version < "3.9" and python_version >= "3.7" and python_full_version >= "3.7.0"
