--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pylint = "2.7.3"
 pytest = "6.2.2"
 pytest-flake8 = "1.0.6"
 pytest-pylint = "0.18.0"
+pre-commit = "^2.20.0"
 
 [tool.black]
 line-length = 104
