--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,34 @@
 line_length = 104
 skip_gitignore = true
 extend_skip_glob = ""
+
+[flake8]
+max-line-length = 104
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
+extend-ignore = E203, W503
+ignore = E203, E226, E266, E501, W503, E265, E402
+
+[pylint]
+max-line-length = 104
+
+[pylint.messages_control]
+# https://vald-phoenix.github.io/pylint-errors/#list-of-errors
+disable =
+    no-member,
+    no-name-in-module,
+    import-error,
+    duplicate-code,
+    too-many-instance-attributes,
+    too-many-arguments,
+    too-many-locals,
+    not-callable,
+    simplifiable-if-expression,
+    protected-access,
+    used-before-assignment,
+    line-too-long,
+    too-few-public-methods,
+    wrong-import-position,
+    C0114, # missing-module-docstring
+    C0115, # missing-class-docstring
+    C0116, # missing-function-docstring
