--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -17,4 +17,4 @@ labels:
   - label: "release"
     branch: "^release/v[0-9]+[.][0-9]+[.][0-9]+"
   - label: "need-to-change-branch-name"
-    branch: "^(?!^feature/.*$)(?!^bugfix/.*$)(?!^enhance/.*$)(?!^style/.*$)(?!^docs/.*$).*$"
+    branch: "^(?!^feature/.*$)(?!^bugfix/.*$)(?!^hotfix/.*$)(?!^enhance/.*$)(?!^style/.*$)(?!^docs/.*$).*$"
