Fix github action issue

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ max-line-length = 104
 [pylint.messages_control]
 # https://vald-phoenix.github.io/pylint-errors/#list-of-errors
 disable =
+    invalid-name,
     no-member,
     no-name-in-module,
     import-error,
