--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.8.8
+          python-version: '3.8.8'
       - name: Initial setup
         shell: bash -l {0}
         run: make init-dev
