--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: "Automation] Pull Request"
+name: "[Automation] Pull Request"
 on:
   pull_request:
     types: [opened, synchronize, edited, reopened, closed]
